# New-Method

./: agent.md  client.go  go.mod  run.sh  server.go
best method tunnel/: Cargo.toml  build.rs  develope.md  readme.txt
best method tunnel/DIRECT/: README.md  direct_tunnel.sh
best method tunnel/configs/: client.example.toml  server.example.toml
best method tunnel/scripts/: first_run.sh  install.sh  monitor.sh
best method tunnel/src/: main.rs
